--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/BallPool8.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/BallPool8.data.br",
-        frameworkUrl: buildUrl + "/BallPool8.framework.js.br",
-        codeUrl: buildUrl + "/BallPool8.wasm.br",
+        dataUrl: buildUrl + "/BallPool8.data",
+        frameworkUrl: buildUrl + "/BallPool8.framework.js",
+        codeUrl: buildUrl + "/BallPool8.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "8 Ball Pool Completed Game",
